projet_gl/src/test/deca/codegen/valid/ERROR/heap.deca
// Description:
//    Overflow
//
// Resultats:
//    Error : Heap Overflow
// 
// Historique:
//    cree le 09/01/2024

class Klass {}
{
	while(true){new Klass();}
}
